--- a/index.html
+++ b/index.html
@@ -1,99 +1,142 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>簡易マリオ風ゲーム</title>
+  <title>優輝のマリオ風ゲーム</title>
   <style>
-    body { background: #e0f7fa; margin: 0; overflow: hidden; }
+    body { margin: 0; background: #cceeff; overflow: hidden; }
     #game {
-      width: 600px;
-      height: 300px;
-      background: #a7d129;
       position: relative;
+      width: 800px;
+      height: 300px;
       margin: auto;
-      top: 50px;
       overflow: hidden;
+      background: #ccff99;
+    }
+    #world {
+      position: absolute;
+      width: 2400px;
+      height: 300px;
+      left: 0;
+      top: 0;
     }
     #player {
       width: 30px;
       height: 30px;
       background: red;
       position: absolute;
-      bottom: 30px;
       left: 50px;
+      bottom: 30px;
     }
     #ground {
       position: absolute;
       bottom: 0;
-      width: 100%;
       height: 30px;
-      background: #5d4037;
+      width: 100%;
+      background: #654321;
     }
     .block {
-      width: 30px;
+      width: 40px;
       height: 30px;
       background: blue;
       position: absolute;
-      bottom: 60px;
+    }
+    .enemy {
+      width: 30px;
+      height: 30px;
+      background: black;
+      position: absolute;
+      bottom: 30px;
+    }
+    .bullet {
+      width: 10px;
+      height: 10px;
+      background: yellow;
+      position: absolute;
     }
   </style>
 </head>
 <body>
   <div id="game">
-    <div id="player"></div>
-    <div class="block" style="left: 200px;"></div>
-    <div class="block" style="left: 350px;"></div>
-    <div id="ground"></div>
+    <div id="world">
+      <div id="player"></div>
+      <div class="block" style="left: 400px; bottom: 60px;"></div>
+      <div class="block" style="left: 700px; bottom: 90px;"></div>
+      <div class="block" style="left: 1200px; bottom: 60px;"></div>
+      <div id="enemy1" class="enemy" style="left: 1500px;"></div>
+      <div id="enemy2" class="enemy" style="left: 1800px;"></div>
+      <div id="ground"></div>
+    </div>
   </div>
 
   <script>
+    const game = document.getElementById("game");
+    const world = document.getElementById("world");
     const player = document.getElementById("player");
-    const blocks = document.querySelectorAll(".block");
-
-    let posX = 50;
-    let posY = 0;
-    let velocityY = 0;
+    const gravity = 0.6;
+    let posX = 50, posY = 0, velocityY = 0;
     let isJumping = false;
-    const gravity = 0.7;
+    const keys = {};
+    const bullets = [];
 
-    document.addEventListener("keydown", (e) => {
-      if (e.key === "ArrowRight" || e.key === "d") {
-        posX += 10;
-      } else if (e.key === "ArrowLeft" || e.key === "a") {
-        posX -= 10;
-      } else if ((e.key === " " || e.key === "ArrowUp" || e.key === "w") && !isJumping) {
+    document.addEventListener("keydown", e => keys[e.key.toLowerCase()] = true);
+    document.addEventListener("keyup", e => keys[e.key.toLowerCase()] = false);
+
+    function shoot() {
+      const bullet = document.createElement("div");
+      bullet.className = "bullet";
+      bullet.style.left = (posX + 30) + "px";
+      bullet.style.bottom = (30 + posY + 10) + "px";
+      world.appendChild(bullet);
+      bullets.push({ el: bullet, x: posX + 30, y: posY + 30 });
+    }
+
+    function update() {
+      if (keys["a"]) posX -= 5;
+      if (keys["d"]) posX += 5;
+      if (keys["w"] && !isJumping) {
         velocityY = -12;
         isJumping = true;
       }
-    });
+      if (keys[" "] && bullets.length < 5) shoot();
 
-    function update() {
       velocityY += gravity;
       posY += velocityY;
 
-      // 地面に落ちたら止める
-      if (posY >= 0) {
+      if (posY > 0) {
         posY = 0;
         velocityY = 0;
         isJumping = false;
       }
 
-      // プレイヤー位置を更新
+      // スクロール処理（マップの端に来たら画面が動く）
+      const scrollX = Math.min(Math.max(posX - 400, 0), 1600);
+      world.style.left = -scrollX + "px";
+
+      // プレイヤーの位置更新
       player.style.left = posX + "px";
       player.style.bottom = (30 + posY) + "px";
 
-      // 簡単な障害物との当たり判定
-      blocks.forEach(block => {
-        const blockX = parseInt(block.style.left);
-        if (
-          posX + 30 > blockX &&
-          posX < blockX + 30 &&
-          posY < 30 &&
-          posY > -30
-        ) {
-          // 当たったら戻す
-          posX -= 10;
+      // 弾の移動と敵との当たり判定
+      bullets.forEach((b, index) => {
+        b.x += 10;
+        b.el.style.left = b.x + "px";
+        if (b.x > 2400) {
+          b.el.remove();
+          bullets.splice(index, 1);
         }
+
+        // 敵との判定
+        ["enemy1", "enemy2"].forEach(id => {
+          const enemy = document.getElementById(id);
+          if (enemy) {
+            const ex = parseInt(enemy.style.left);
+            if (b.x > ex && b.x < ex + 30 && b.y < 60) {
+              enemy.remove();
+              b.el.remove();
+            }
+          }
+        });
       });
 
       requestAnimationFrame(update);
